Commit 9th January as backup

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ tagline:
 author :
   name : Tadhg Lambe 
   email : ieee@umail.ucc.ie
+  facebook: uccieee
   #github : username
   #twitter : username
   #feedburner : feedname
