changed from sb

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://ieee.ucc.ie/sb
-root: /sb
+production_url : http://ieee.ucc.ie/
+BASE_PATH: sb
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 JB :
