--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://ieee.ucc.ie/sb
+production_url : http://ieee.ucc.ie/sb/
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -100,7 +100,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-37635110-1'
     getclicky :
       site_id : 
     mixpanel :
