--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
+base_url: /sb
+url: http://ieee.ucc.ie/sb
 production_url : http://ieee.ucc.ie/sb/
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
@@ -56,7 +58,8 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : false
+  BASE_PATH : http://ieee.ucc.ie/
+  root: /sb
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
