Made changes to CSS and formatting, added privacy and data policies based off the UCC policies and added a link to the UCC Acceptable Use Policy

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ pygments: true
 #
 title : UCC IEEE SB
 tagline: 
-author :
+author : 
   name : Tadhg Lambe 
   email : ieee@umail.ucc.ie
   facebook: uccieee
@@ -59,7 +59,7 @@ JB :
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
   BASE_PATH : http://ieee.ucc.ie/
-  root: /sb
+  root: /
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
