Changed email address to ieeesb@ue.ucc.ie Added github account link

--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title : UCC IEEE SB
 tagline: 
 author : 
   name : Tadhg Lambe 
-  email : ieee@umail.ucc.ie
+  email : ieeesb@ue.ucc.ie
   facebook: uccieee
-  #github : username
+  github : UCCIEEESB
   #twitter : username
   #feedburner : feedname
 
